--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.0",
+    "@astrojs/rss": "^2.2.0",
     "@astrojs/sitemap": "^1.2.0",
     "@astrojs/tailwind": "^3.1.0",
     "@tailwindcss/typography": "^0.5.9",
