--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
       ],
       "@schemas/*": [
         "src/schemas/*"
-      ]
+      ],
+      "@assets/*": [
+        "src/assets/*"
+      ],
     }
   }
 }
