--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.0",
-    "@astrojs/rss": "^2.2.0",
     "@astrojs/sitemap": "^1.2.0",
     "@astrojs/tailwind": "^3.1.0",
     "@tailwindcss/typography": "^0.5.9",
     "astro": "^2.1.0",
     "astro-compress": "^1.1.35",
+    "feed": "^4.2.2",
     "tailwindcss": "^3.2.7"
   }
 }
