--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "astro-compress": "^1.1.35",
     "feed": "^4.2.2",
     "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.5"
   }
 }
