--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,21 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": [
-        "src/components/*"
-      ],
-      "@layouts/*": [
-        "src/layouts/*"
-      ],
-      "@schemas/*": [
-        "src/schemas/*"
-      ],
-      "@assets/*": [
-        "src/assets/*"
-      ],
+      // "@components/*": [
+      //   "src/components/*"
+      // ],
+      // "@layouts/*": [
+      //   "src/layouts/*"
+      // ],
+      // "@schemas/*": [
+      //   "src/schemas/*"
+      // ],
+      // "@assets/*": [
+      //   "src/assets/*"
+      // ],
+      "~*": [
+        "src/*"
+      ]
     }
   }
 }
